--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,7 +160,7 @@ h6 {
 .header .profile-img img {
   margin: 15px auto;
   display: block;
-  width: 120px;
+  width: 50%;
   border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
