--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,13 +158,15 @@ h6 {
 }
 
 .header .profile-img img {
+  display: block;
   margin: 15px auto;
-  width: 150px; /* fixed width */
-  height: 150px; /* fixed height */
-  object-fit: cover; /* keeps image centered and cropped */
-  border-radius: 50%; /* makes it a circle */
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
   border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
 }
+
 
 
 .header .logo {
